add sponsors section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </div>
         </section>
         <!-- teams section end -->
+
         <!-- features will enjoy -->
          <section>
             
@@ -103,7 +104,23 @@
             </div>
 
          </section>
-
+        <!--  -->
+         <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">
+                    Our Sponsor
+                </h3>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quam officia aperiam quidem aliquid eos.
+                </p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+            </div>
+         </section>
     </main>
     <footer></footer>
     
