--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="featured-architect">
                 <img src="./images/architect.png" alt="">
                 <button class="btn-primary" id="experience-badge">
-                    <span class="">10+Years</span>
-                    <span>Experience</span>
+                    <span id="experience-year">10+Years</span>
+                    <span >Experience</span>
 
                 </button>
             </div>
