--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <img src="./images/architect.png" alt="">
                 <button class="btn-primary" id="experience-badge">
                     <span id="experience-year">10+Years</span>
-                    <span >Experience</span>
+                    <span>Experience</span>
 
                 </button>
             </div>
@@ -180,7 +180,10 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="bg-light">
+        <div class="footer-p"><p>All rights reserved copyright@2023 startup landing page design</p></div>
+
+    </footer>
 
 </body>
 
